# OpenGL-Render-Engine

./: .gitignore  CMakeLists.txt
cmake/: FindASSIMP.cmake
include/: glad.c
res/shaders/: default.shader  default_v.glsl
res/shaders/light/: light.shader  light_v.glsl
src/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Window.cpp  Window.h  main.cpp
src/shaders/: cube_f.glsl  cube_v.glsl  default_f.glsl
